--- a/css/style.css
+++ b/css/style.css
@@ -973,10 +973,10 @@ font-family: 'Roboto', sans-serif; */
 .icons{
   width: 30%;
   height: 30%;
-  transition: linear 1s;
-  /* animation: zoomIn 2s; */
-  transform: translateY(-30px);
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
+  transition: all 5s;
+
+  /* transform: translateY(-30px); */
+  /* box-shadow: 5px 10px 20px rgba(24, 61, 9, 0.9); */
 }
 
 @keyframes zoomIn{
@@ -1008,18 +1008,21 @@ font-family: 'Roboto', sans-serif; */
   padding-bottom: 15%;
   padding-left: 2%;
   
+  
 }
 
 .iconsId{
   color: white;
   font-size: 55px;
   transition: width 2s;
+  transition: ease 5s;
   /* transition-timing-function: ease-in; */
 }
 
 .skills{
   color: white;
   font-size: 25px;
+  transition: ease 5s;
 }
 #noteh3{
   padding-bottom: 5%;
