--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,7 @@ h3{
 
 @media only screen and (max-width: 601px) and (min-width: 400px) {
 
-  .flex1{
+  /* .flex1{
     width: 100%;
     height: 30%;
     display: flex;
@@ -521,12 +521,11 @@ h3{
 
     width: 100%;
     padding: 0%;
-    /* margin-right: -40%; */
     margin-left: -25%;
     
  }
  .flex2{
-  /* height: 60%; */
+
   display: flex;
   flex-direction: column;
   
@@ -549,89 +548,96 @@ h3{
   margin-bottom: 90%;
   margin-top: -120%; 
   padding-left: 8%;
-  
-  /* margin-top: -95%;
-  margin-bottom: 75%; */
 
 
 }
 
+ */
 
-
-
-
-  /* .flex1{
+  .flex1{
     width: 100%;
     height: 30%;
-  
     display: flex;
     flex-direction: row;
     padding-bottom: 4%;
   
   }
   .flex1-1{
-    width: 25%;
+    width: 30%;
   
   }
-  .flex1-1 img{
+  /* .flex1-1 img{
     width: 25%;
    
   } */
 
 
-  /* .flex1-2{
-    width: 75%;
+  .flex1-2{
+    width: 90%;
    
   }
 
   .flex1-2 h3 {
     font-size: 24px;
+    font-weight: 800;
+    text-align: center;
+    width: 100%;
   }
 
   
   .flex1-2 p{
-    font-size: 16px;
-    text-align: justify;
+    font-size: 20px;
+    text-align: start;
+    width: 100%;
     
   }
   
   
   .flex2{
-    height: 30%;
-  
+    /* background-color: royalblue; */
     display: flex;
     flex-direction: row;
+    width: 100%;
+    margin: 0%;
   
   }
-   */
+   
   
-  /* .flex2-1{
-    width: 75%;
+  .flex2-1{
+    width: 90%;
+    /* background-color: rosybrown; */
+    
   
   }
 
 
   .flex2-1 h3{
+    
     font-size: 24px;
+    font-weight: 800;
+    text-align: center;
+    width: 100%;
   }
 
-
-
   .flex2-2{
-    width: 25%;
+    width: 30%;
+ 
+  }
+
+  .flex2-2 img{
+    /* width: 40%; */
+    /* padding-left: 20%; */
+    background-color: saddlebrown;
    
   }
   
   .flex2-1 p{
-    font-size: 16px;
+    font-size: 20px;
     text-align: justify;
+    width: 100%;
   }
   
-  .flex2-2 img{
-    width: 25%;
-  }
-   */
-  
+ 
   
 }
 
