--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .nav-container{
   background-color: #E0EBE8;
   height: 900%;
@@ -6,35 +5,27 @@
   padding-top: 1%;
   color: #4AB19A;
   font-family: 'EB Garamond', serif;
-  /* margin-bottom: -3%; */
- 
 }
 
 .nav-ul{
   padding-left: 40%;
-  /* display: inline; */
+
 }
 
 
- @media only screen and (max-width: 600px) and (min-width: 350px){ 
-  .nav-ul{
-    /* padding-left: 10%; */
-    display: inline-block;
-   
+  @media only screen and (max-width: 600px) { 
   
+
+  .nav-ul{
+    display: inline-block;
   }
 
   .navbar-brand{
-    /* padding-left: 10%; */
     margin-left: -15%;
-   
   }
 
   .nav-ul > .navbar-nav > .nav-item{
     display: inline-block;
-    /* padding-right: 5%; */
-   
-  
   }
 
 
@@ -57,7 +48,7 @@
     width: 15%;
   }
 
-}
+} 
 
 
 
@@ -75,6 +66,11 @@
   color: #28685A;
   font-weight: 400;
 }
+.nav-link:clicked{
+  color: #28685A;
+  font-weight: 600;
+}
+
 
 
 .navbar-brand img {
@@ -357,6 +353,7 @@ h3{
 
 .flex1-2{
   width: 75%;
+  /* background-color: aqua; */
  
 }
 
@@ -381,7 +378,9 @@ h3{
 
 .flex2-1{
   width: 75%;
-
+  /* background-color: aquamarine; */
+  
+ 
 }
 
 .flex2-1 h3{
@@ -395,9 +394,12 @@ h3{
 }
 .flex2-2{
   width: 20%;
-  
- 
+  transform: translateX(45px);
 }
+
+  
+
+
 
 .flex2-1 p{
   font-size: 18px;
@@ -828,15 +830,13 @@ h3{
      margin: 5%;
      border-radius: 2.5%;
      padding: 1% 2% 1% 2%;
-   
-     
- 
+  
     
   }
 
   .container-fluid6 button a{
     display: inline-flex;
-  
+    padding: 0% 35% 0% 35%;
 
   }
 }
