--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,11 @@
     width: 15%;
   }
 
+  .nav-ul > .navbar-nav > .nav-item >.nav-link:active::after{
+    color: #28685A;
+    font-weight: 600;
+  }
+
 } 
 
 
@@ -836,10 +841,6 @@ h3{
   background-color: rgb(3, 4, 4);
 }
 
-.container-fluid6 >button >  #blue:hover{
-  background-color: rgb(32, 81, 218);
-}
-
 
 .container-fluid6 button> a{
   color: #F5F9F8;
@@ -874,9 +875,11 @@ h3{
      margin: 5%;
      border-radius: 2.5%;
      padding: 3% 29% 3% 29%;
-  
-    
   }
+  .container-fluid6 button:hover{
+    background-color: rgb(3, 4, 4);
+  }
+
 
   #blue{
     background-color: #4299ED;;
