--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ h3{
 
 
 
-@media only screen and (max-width: 1240px) and (min-width: 600px) {
+@media only screen and (max-width: 1240px) {
   .flex1{
     width: 100%;
     height: 30%;
@@ -496,7 +496,7 @@ h3{
 
 }
 
-@media only screen and (max-width: 601px) and (min-width: 400px) {
+@media only screen and (max-width: 600px) {
 
   /* .flex1{
     width: 100%;
@@ -583,7 +583,7 @@ h3{
   
   .flex1-2 p{
     font-size: 20px;
-    text-align: start;
+    text-align: center;
     width: 100%;
     
   }
@@ -629,7 +629,7 @@ h3{
   
   .flex2-1 p{
     font-size: 20px;
-    text-align: justify;
+    text-align: center;
     width: 100%;
   }
   
